--- a/firebase-5/package.json
+++ b/firebase-5/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "deploy": "ng build && firebase deploy --only hosting:markfazekas-firebase-5"
   },
   "private": true,
   "dependencies": {
